--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my first github repo</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h3> my first websit </h3>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus harum dolorem placeat. Eum ea reiciendis tenetur natus neque eius sit enim? Optio ipsa ad odit quasi eaque soluta perspiciatis. Ipsam.</p>
+    </div>
 </body>
 </html>
