--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <div>
-        <h3> my first websit </h3>
+        <h3> my first website </h3>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus harum dolorem placeat. Eum ea reiciendis tenetur natus neque eius sit enim? Optio ipsa ad odit quasi eaque soluta perspiciatis. Ipsam.</p>
+    </div>
+    <div>
+        <h3> my second website </h3>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus harum dolorem placeat. Eum ea reiciendis tenetur natus neque eius sit enim? Optio ipsa ad odit quasi eaque soluta perspiciatis. Ipsam.</p>
+    </div>
+    <div>
+        <h3> my third website </h3>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus harum dolorem placeat. Eum ea reiciendis tenetur natus neque eius sit enim? Optio ipsa ad odit quasi eaque soluta perspiciatis. Ipsam.</p>
     </div>
 </body>
