added a list push code

--- a/index.html
+++ b/index.html
@@ -19,5 +19,13 @@
         <h3> my third website </h3>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus harum dolorem placeat. Eum ea reiciendis tenetur natus neque eius sit enim? Optio ipsa ad odit quasi eaque soluta perspiciatis. Ipsam.</p>
     </div>
+    <div>
+        <h3>how to push incremental</h3>
+        <ul>
+            <li> git add .</li>
+            <li>git commit -m "add a meaningfull commit message "</li>
+            <li>git push</li>
+        </ul>
+    </div>
 </body>
 </html>
