added the image

--- a/index.html
+++ b/index.html
@@ -27,5 +27,9 @@
             <li>git push</li>
         </ul>
     </div>
+    <div>
+        <h3>unknown picture</h3>
+        <img class="img" src="image/unnamed.png" alt="">
+    </div>
 </body>
 </html>
